--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "notification-demo",
   "version": "1.0.0",
-  "description": "A simple notification system using Eleventy, Alpine, and some CSS",
+  "description": "A simple notification system using Alpine, Eleventy data, and some CSS",
   "scripts": {
     "build": "eleventy",
     "serve": "eleventy --serve"
